add background, disable scrollview footer links, added backgrounds to about us and faq for readining clearity

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body class="bg-PineappleYellow" data-sveltekit-preload-data="hover">
+	<body class="bg-[url($lib/assets/background_pattern.jpg)] bg-position-[center_top_1rem] bg-repeat">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
